Integration of Room and user token structure for authentication
- Integrate room
- Implementation of user token for authentication
- Implementation of test of User Token class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Skeleton</string>
     <string name="hello_word">Hello World!</string>
     <string name="click_me">Click Me</string>
+    <string name="login_fragment">Login Fragment</string>
+    <string name="signup_fragment">Signup Fragment</string>
 </resources>
